fix overflow on css-mobile

--- a/public/stylesheets/style-mobile.css
+++ b/public/stylesheets/style-mobile.css
@@ -19,6 +19,7 @@
 	body
 	{
 		padding-top: 0;
+		overflow-x: hidden;
 	}
 
 	h2, h3, h4, h5, h6
